# cirro-restock-watcher

./: .gitignore  CLAUDE.md  LICENSE  README.md  SPEC.md  progress.md  pyproject.toml  state.json  targets.json
.github/workflows/: probe.yml  watch.yml
scripts/: probe.py
tests/: test_config.py  test_main.py  test_notify.py  test_shopify.py  test_state.py
tests/fixtures/: 12k-cool.json  14k-cool.json  14k-heat.json
watcher/: __main__.py  config.py  notify.py  shopify.py  state.py
